crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl4000_deprecated_maintainer_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1220
expression: "serde_json::json!({ \"findings\": findings, \"fixes\": fixes, })"
---
{
  "findings": [
    {
      "code": "RDL4000",
      "help": null,
      "labels": [],
      "message": "use OCI labels instead of MAINTAINER",
      "path": "",
      "primary_span": {
        "end_byte": 100,
        "end_column": 27,
        "end_line": 3,
        "start_byte": 74,
        "start_column": 1,
        "start_line": 3
      },
      "severity": "error"
    },
    {
      "code": "RDL4000",
      "help": null,
      "labels": [],
      "message": "use OCI labels instead of MAINTAINER",
      "path": "",
      "primary_span": {
        "end_byte": 139,
        "end_column": 39,
        "end_line": 4,
        "start_byte": 101,
        "start_column": 1,
        "start_line": 4
      },
      "severity": "error"
    },
    {
      "code": "RDL4000",
      "help": null,
      "labels": [],
      "message": "use OCI labels instead of MAINTAINER",
      "path": "",
      "primary_span": {
        "end_byte": 179,
        "end_column": 40,
        "end_line": 5,
        "start_byte": 140,
        "start_column": 1,
        "start_line": 5
      },
      "severity": "error"
    }
  ],
  "fixes": [
    {
      "applicability": {
        "type": "safe"
      },
      "edits": [
        {
          "kind": {
            "replacement": "LABEL org.opencontainers.image.authors=\"ops@example.com\"",
            "type": "replace"
          },
          "span": {
            "column": 1,
            "length": 26,
            "line": 3
          }
        }
      ],
      "title": "replace MAINTAINER with OCI authors label"
    },
    {
      "applicability": {
        "type": "safe"
      },
      "edits": [
        {
          "kind": {
            "replacement": "LABEL org.opencontainers.image.authors=\"Jane Doe <jane@example.com>\"",
            "type": "replace"
          },
          "span": {
            "column": 1,
            "length": 38,
            "line": 4
          }
        }
      ],
      "title": "replace MAINTAINER with OCI authors label"
    }
  ]
}
