crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl4001_either_wget_or_curl_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL4001",
    "help": null,
    "labels": [],
    "message": "either use wget or curl but not both",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "RDL4001",
    "help": null,
    "labels": [],
    "message": "either use wget or curl but not both",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "RDL4001",
    "help": null,
    "labels": [],
    "message": "either use wget or curl but not both",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 11,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  }
]
