crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl4004_entrypoint_cardinality_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1303
expression: "serde_json::to_value(&cases).expect(\"cases should serialize\")"
---
[
  {
    "findings": [],
    "fixture": "RDL4004.no-entrypoint"
  },
  {
    "findings": [],
    "fixture": "RDL4004.single-entrypoint"
  },
  {
    "findings": [
      {
        "code": "RDL4004",
        "help": null,
        "labels": [],
        "message": "only the final ENTRYPOINT is used",
        "path": "",
        "primary_span": {
          "end_byte": 96,
          "end_column": 31,
          "end_line": 4,
          "start_byte": 66,
          "start_column": 1,
          "start_line": 4
        },
        "severity": "error"
      },
      {
        "code": "RDL4004",
        "help": null,
        "labels": [],
        "message": "only the final ENTRYPOINT is used",
        "path": "",
        "primary_span": {
          "end_byte": 132,
          "end_column": 36,
          "end_line": 5,
          "start_byte": 97,
          "start_column": 1,
          "start_line": 5
        },
        "severity": "error"
      }
    ],
    "fixture": "RDL4004.duplicate-entrypoint"
  }
]
