crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl4004_single_entrypoint_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&cases).expect(\"cases should serialize\")"
---
[
  {
    "findings": [],
    "fixture": "RDL4004.no-entrypoint"
  },
  {
    "findings": [],
    "fixture": "RDL4004.single-entrypoint"
  },
  {
    "findings": [
      {
        "code": "RDL4004",
        "help": null,
        "labels": [],
        "message": "only the final ENTRYPOINT is used",
        "path": "",
        "primary_span": {
          "end_byte": 0,
          "end_column": 1,
          "end_line": 4,
          "start_byte": 0,
          "start_column": 1,
          "start_line": 4
        },
        "severity": "error"
      },
      {
        "code": "RDL4004",
        "help": null,
        "labels": [],
        "message": "only the final ENTRYPOINT is used",
        "path": "",
        "primary_span": {
          "end_byte": 0,
          "end_column": 1,
          "end_line": 5,
          "start_byte": 0,
          "start_column": 1,
          "start_line": 5
        },
        "severity": "error"
      }
    ],
    "fixture": "RDL4004.duplicate-entrypoint"
  }
]
