crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl4006_pipefail_before_pipe_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL4006",
    "help": null,
    "labels": [],
    "message": "set the SHELL option -o pipefail before RUN with a pipe in it",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL4006",
    "help": null,
    "labels": [],
    "message": "set the SHELL option -o pipefail before RUN with a pipe in it",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 10,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "warning"
  }
]
