crates/rudolint-rules/tests/snapshots/rule_fixtures__rule_metadata_contract.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: metadata
---
[
  {
    "category": "buildkit",
    "code": "RDK1000",
    "default_severity": "info",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDK1000.md",
    "fix": "safe",
    "name": "buildkit-syntax-directive",
    "profile": "default",
    "status": "implemented",
    "summary": "require explicit syntax directive for BuildKit-only features"
  },
  {
    "category": "buildkit",
    "code": "RDK1001",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDK1001.md",
    "fix": "none",
    "name": "secret-like-arg-or-env",
    "profile": "default",
    "status": "implemented",
    "summary": "reject secret-like ARG and ENV names"
  },
  {
    "category": "buildkit",
    "code": "RDK1002",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDK1002.md",
    "fix": "none",
    "name": "secret-in-run",
    "profile": "default",
    "status": "implemented",
    "summary": "prefer BuildKit secret mounts for secret-consuming RUN steps"
  },
  {
    "category": "buildkit",
    "code": "RDK1003",
    "default_severity": "info",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDK1003.md",
    "fix": "none",
    "name": "cache-mount-for-package-install",
    "profile": "default",
    "status": "implemented",
    "summary": "prefer BuildKit cache mounts for package-manager caches"
  },
  {
    "category": "compatibility",
    "code": "RDL1001",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL1001.md",
    "fix": "none",
    "name": "legacy-external-suppression",
    "profile": "compat",
    "status": "implemented",
    "summary": "warn on legacy external linter suppression comments"
  },
  {
    "category": "compatibility",
    "code": "RDL3000",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3000.md",
    "fix": "none",
    "name": "absolute-workdir",
    "profile": "compat",
    "status": "implemented",
    "summary": "require absolute WORKDIR paths"
  },
  {
    "category": "compatibility",
    "code": "RDL3001",
    "default_severity": "info",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3001.md",
    "fix": "none",
    "name": "disallowed-container-commands",
    "profile": "compat",
    "status": "implemented",
    "summary": "avoid commands that rarely make sense during Docker builds"
  },
  {
    "category": "compatibility",
    "code": "RDL3002",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3002.md",
    "fix": "none",
    "name": "final-user-not-root",
    "profile": "compat",
    "status": "implemented",
    "summary": "require the final USER to be non-root"
  },
  {
    "category": "compatibility",
    "code": "RDL3003",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3003.md",
    "fix": "none",
    "name": "use-workdir-for-cd",
    "profile": "compat",
    "status": "implemented",
    "summary": "prefer WORKDIR over RUN cd"
  },
  {
    "category": "compatibility",
    "code": "RDL3004",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3004.md",
    "fix": "none",
    "name": "no-sudo",
    "profile": "compat",
    "status": "implemented",
    "summary": "avoid sudo in Docker builds"
  },
  {
    "category": "compatibility",
    "code": "RDL3006",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3006.md",
    "fix": "none",
    "name": "explicit-from-tag",
    "profile": "compat",
    "status": "implemented",
    "summary": "require explicit image tags in FROM"
  },
  {
    "category": "compatibility",
    "code": "RDL3007",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3007.md",
    "fix": "none",
    "name": "no-latest-tag",
    "profile": "compat",
    "status": "implemented",
    "summary": "reject latest base image tags"
  },
  {
    "category": "compatibility",
    "code": "RDL3008",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3008.md",
    "fix": "none",
    "name": "pin-apt-get-install-versions",
    "profile": "compat",
    "status": "implemented",
    "summary": "pin versions in apt-get install"
  },
  {
    "category": "compatibility",
    "code": "RDL3009",
    "default_severity": "info",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3009.md",
    "fix": "none",
    "name": "clean-apt-lists",
    "profile": "compat",
    "status": "implemented",
    "summary": "delete apt-get package lists after use"
  },
  {
    "category": "compatibility",
    "code": "RDL3010",
    "default_severity": "info",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3010.md",
    "fix": "none",
    "name": "use-add-for-archives",
    "profile": "compat",
    "status": "implemented",
    "summary": "use ADD for extracting local archives"
  },
  {
    "category": "compatibility",
    "code": "RDL3011",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3011.md",
    "fix": "none",
    "name": "valid-expose-port",
    "profile": "compat",
    "status": "implemented",
    "summary": "validate EXPOSE port numbers"
  },
  {
    "category": "compatibility",
    "code": "RDL3012",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3012.md",
    "fix": "none",
    "name": "single-healthcheck",
    "profile": "compat",
    "status": "implemented",
    "summary": "allow only one HEALTHCHECK instruction"
  },
  {
    "category": "compatibility",
    "code": "RDL3013",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3013.md",
    "fix": "none",
    "name": "pin-pip-versions",
    "profile": "compat",
    "status": "implemented",
    "summary": "pin versions in pip install"
  },
  {
    "category": "compatibility",
    "code": "RDL3014",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3014.md",
    "fix": "none",
    "name": "apt-get-install-assume-yes",
    "profile": "compat",
    "status": "implemented",
    "summary": "use -y with apt-get install"
  },
  {
    "category": "compatibility",
    "code": "RDL3015",
    "default_severity": "info",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3015.md",
    "fix": "none",
    "name": "apt-get-no-install-recommends",
    "profile": "compat",
    "status": "implemented",
    "summary": "avoid recommended packages in apt-get install"
  },
  {
    "category": "compatibility",
    "code": "RDL3016",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3016.md",
    "fix": "none",
    "name": "pin-npm-versions",
    "profile": "compat",
    "status": "implemented",
    "summary": "pin versions in npm install"
  },
  {
    "category": "compatibility",
    "code": "RDL3018",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3018.md",
    "fix": "none",
    "name": "pin-apk-versions",
    "profile": "compat",
    "status": "implemented",
    "summary": "pin versions in apk add"
  },
  {
    "category": "compatibility",
    "code": "RDL3019",
    "default_severity": "info",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3019.md",
    "fix": "none",
    "name": "apk-add-no-cache",
    "profile": "compat",
    "status": "implemented",
    "summary": "use --no-cache with apk add"
  },
  {
    "category": "compatibility",
    "code": "RDL3020",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3020.md",
    "fix": "none",
    "name": "prefer-copy",
    "profile": "compat",
    "status": "implemented",
    "summary": "prefer COPY for plain local files"
  },
  {
    "category": "compatibility",
    "code": "RDL3021",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3021.md",
    "fix": "none",
    "name": "copy-multiple-destination-slash",
    "profile": "compat",
    "status": "implemented",
    "summary": "require trailing slash for COPY destinations with multiple sources"
  },
  {
    "category": "compatibility",
    "code": "RDL3022",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3022.md",
    "fix": "none",
    "name": "copy-from-previous-stage",
    "profile": "compat",
    "status": "implemented",
    "summary": "require COPY --from references to resolve to previous build stages"
  },
  {
    "category": "compatibility",
    "code": "RDL3023",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3023.md",
    "fix": "none",
    "name": "copy-from-own-stage",
    "profile": "compat",
    "status": "implemented",
    "summary": "forbid COPY --from references to the current stage"
  },
  {
    "category": "compatibility",
    "code": "RDL3024",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3024.md",
    "fix": "none",
    "name": "unique-stage-names",
    "profile": "compat",
    "status": "implemented",
    "summary": "require unique multi-stage aliases"
  },
  {
    "category": "compatibility",
    "code": "RDL3025",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3025.md",
    "fix": "manual",
    "name": "json-entrypoints",
    "profile": "compat",
    "status": "implemented",
    "summary": "prefer JSON form for CMD and ENTRYPOINT"
  },
  {
    "category": "compatibility",
    "code": "RDL3026",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3026.md",
    "fix": "none",
    "name": "trusted-registries",
    "profile": "compat",
    "status": "implemented",
    "summary": "restrict FROM images to trusted registries"
  },
  {
    "category": "compatibility",
    "code": "RDL3027",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3027.md",
    "fix": "none",
    "name": "use-apt-get",
    "profile": "compat",
    "status": "implemented",
    "summary": "prefer apt-get or apt-cache over apt"
  },
  {
    "category": "compatibility",
    "code": "RDL3028",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3028.md",
    "fix": "none",
    "name": "pin-gem-versions",
    "profile": "compat",
    "status": "implemented",
    "summary": "pin versions in gem install"
  },
  {
    "category": "compatibility",
    "code": "RDL3029",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3029.md",
    "fix": "none",
    "name": "no-from-platform-flag",
    "profile": "compat",
    "status": "implemented",
    "summary": "avoid --platform in FROM"
  },
  {
    "category": "compatibility",
    "code": "RDL3030",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3030.md",
    "fix": "none",
    "name": "yum-install-assume-yes",
    "profile": "compat",
    "status": "implemented",
    "summary": "use -y with yum install"
  },
  {
    "category": "compatibility",
    "code": "RDL3032",
    "default_severity": "info",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3032.md",
    "fix": "none",
    "name": "yum-clean-all",
    "profile": "compat",
    "status": "implemented",
    "summary": "clean yum metadata after installs"
  },
  {
    "category": "compatibility",
    "code": "RDL3033",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3033.md",
    "fix": "none",
    "name": "pin-yum-versions",
    "profile": "compat",
    "status": "implemented",
    "summary": "pin versions in yum install"
  },
  {
    "category": "compatibility",
    "code": "RDL3034",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3034.md",
    "fix": "none",
    "name": "zypper-install-assume-yes",
    "profile": "compat",
    "status": "implemented",
    "summary": "use -y with zypper install"
  },
  {
    "category": "compatibility",
    "code": "RDL3035",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3035.md",
    "fix": "none",
    "name": "no-zypper-dist-upgrade",
    "profile": "compat",
    "status": "implemented",
    "summary": "avoid zypper dist-upgrade"
  },
  {
    "category": "compatibility",
    "code": "RDL3036",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3036.md",
    "fix": "none",
    "name": "zypper-clean",
    "profile": "compat",
    "status": "implemented",
    "summary": "clean zypper metadata after use"
  },
  {
    "category": "compatibility",
    "code": "RDL3037",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3037.md",
    "fix": "none",
    "name": "pin-zypper-versions",
    "profile": "compat",
    "status": "implemented",
    "summary": "pin versions in zypper install"
  },
  {
    "category": "compatibility",
    "code": "RDL3038",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL3038.md",
    "fix": "none",
    "name": "dnf-install-assume-yes",
    "profile": "compat",
    "status": "implemented",
    "summary": "use -y with dnf install"
  },
  {
    "category": "compatibility",
    "code": "RDL4000",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL4000.md",
    "fix": "safe",
    "name": "deprecated-maintainer",
    "profile": "compat",
    "status": "implemented",
    "summary": "reject deprecated MAINTAINER instructions"
  },
  {
    "category": "compatibility",
    "code": "RDL4003",
    "default_severity": "warning",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL4003.md",
    "fix": "none",
    "name": "single-cmd",
    "profile": "compat",
    "status": "implemented",
    "summary": "allow only one CMD instruction"
  },
  {
    "category": "compatibility",
    "code": "RDL4004",
    "default_severity": "error",
    "docs_url": "https://github.com/kubeply/rudolint/blob/main/docs/rules/RDL4004.md",
    "fix": "none",
    "name": "single-entrypoint",
    "profile": "compat",
    "status": "implemented",
    "summary": "allow only one ENTRYPOINT instruction"
  }
]
